[gd_scene load_steps=2 format=3 uid="uid://c5xmd24jw04fl"]

[ext_resource type="Script" path="res://Scripts/Entities/damage_box.gd" id="1_2eml5"]

[node name="DamageBox" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_2eml5")

[node name="DamageCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
